--- a/offline/index.html
+++ b/offline/index.html
@@ -1,19 +1,3 @@
-<!doctype html><html lang=en>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta name=robots content="noodp">
-<title>Offline - Jim W. Kennington</title><meta name=description content><meta name=application-name content="Jim W. Kennington">
-<meta name=apple-mobile-web-app-title content="Jim W. Kennington"><link rel="shortcut icon" type=image/x-icon href=/favicon.ico>
-<link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png>
-<link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://locallytrivial.com/offline/><link rel=stylesheet href=/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem('theme')?localStorage.getItem('theme')==='dark':''==='auto'?window.matchMedia('(prefers-color-scheme: dark)').matches:''==='dark')&&document.body.setAttribute('theme','dark')</script><div class=wrapper>
-<main class=main>
-<div class=container><article id=content-404>
-<h2>Offline</h2>
-<p>You're offline. Check your internet connection.</p>
-<a href=/ title=Home>Home</a>
-<a href=# title=Back onclick=window.history.back()>Back</a>
-</article></div>
-</main>
-</div>
-</body></html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta name=robots content="noodp"><title>Offline - Jim W. Kennington</title><meta name=description content><meta name=application-name content="Jim W. Kennington">
+<meta name=apple-mobile-web-app-title content="Jim W. Kennington"><link rel="shortcut icon" type=image/x-icon href=/favicon.ico><link rel=icon type=image/png sizes=32x32 href=/favicon-32x32.png><link rel=icon type=image/png sizes=16x16 href=/favicon-16x16.png><link rel=apple-touch-icon sizes=180x180 href=/apple-touch-icon.png><link rel=manifest href=/site.webmanifest><link rel=canonical href=http://locallytrivial.com/offline/><link rel=stylesheet href=/css/home.min.css></head><body><script>(window.localStorage&&localStorage.getItem("theme")?localStorage.getItem("theme")==="dark":""==="auto"?window.matchMedia("(prefers-color-scheme: dark)").matches:""==="dark")&&document.body.setAttribute("theme","dark")</script><div class=wrapper><main class=main><div class=container><article id=content-404><h2>Offline</h2><p>You're offline. Check your internet connection.</p><a href=/ title=Home>Home</a>
+<a href=# title=Back onclick=window.history.back()>Back</a></article></div></main></div></body></html>
