deploy: 86e5497ca3d65f2169249d88dba4aa05aaba218c

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
 
 <title>About – Jim W. Kennington</title>
 <style>
@@ -40,7 +41,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-355c415dd6b9922ddaf04a2341011fe1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-30c9ffef5937f268bca92abf36cd19d1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -82,6 +83,12 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
+<meta property="og:title" content="About – Jim W. Kennington">
+<meta property="og:description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
+<meta property="og:site_name" content="Jim W. Kennington">
+<meta name="twitter:title" content="About – Jim W. Kennington">
+<meta name="twitter:description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
+<meta name="twitter:card" content="summary">
 </head>
 
 <body class="nav-fixed quarto-light">
@@ -151,6 +158,11 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <h1 class="title">About</h1>
 </div>
 
+<div>
+  <div class="description">
+    Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.
+  </div>
+</div>
 
 
 <div class="quarto-title-meta">
@@ -260,7 +272,7 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/locallytrivial\.com");
+        var filterRegex = new RegExp("https:\/\/jwkennington\.com");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
