--- a/notes.html
+++ b/notes.html
@@ -42,7 +42,7 @@ ul.task-list li input[type="checkbox"] {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-355c415dd6b9922ddaf04a2341011fe1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-30c9ffef5937f268bca92abf36cd19d1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -142,7 +142,17 @@ window.Quarto = {
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
-<link rel="alternate" type="application/rss+xml" title="Jim W. Kennington" href="notes.xml" data-external="1"></head>
+<link rel="alternate" type="application/rss+xml" title="Jim W. Kennington" href="notes.xml" data-external="1"><meta property="og:title" content="Notes – Jim W. Kennington">
+<meta property="og:image" content="https://jwkennington.com/img/bank_coverage.png">
+<meta property="og:site_name" content="Jim W. Kennington">
+<meta property="og:image:height" content="630">
+<meta property="og:image:width" content="730">
+<meta name="twitter:title" content="Notes – Jim W. Kennington">
+<meta name="twitter:image" content="https://jwkennington.com/img/bank_coverage.png">
+<meta name="twitter:image-height" content="630">
+<meta name="twitter:image-width" content="730">
+<meta name="twitter:card" content="summary_large_image">
+</head>
 
 <body class="nav-fixed quarto-light">
 
@@ -223,7 +233,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="UGh5c2ljcyUyQ0NvZGU=" data-listing-date-sort="1737331200000" data-listing-file-modified-sort="1770874895709" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1786">
+<div class="quarto-post image-right" data-index="0" data-categories="UGh5c2ljcyUyQ0NvZGU=" data-listing-date-sort="1737331200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1786">
 <div class="thumbnail"><a href="./posts/20250120-sxolar.html" class="no-external">
 
 <img loading="lazy" src="./img/sxolar-wide.png" class="thumbnail-image">
@@ -241,7 +251,7 @@ window.Quarto = {
 
 </div>
 <div class="delink listing-description"><a href="./posts/20250120-sxolar.html" class="no-external">
-Like many researchers, I use ArXiv to keep up with the latest research in my field. However, I find it difficult to keep track of all the new papers that are posted each…<code></code>
+<p>Introducing <code>sxolar</code>, a Python library that allows you to search ArXiv and get daily email alerts for new papers in your field of interest. This post walks through the process of setting up periodic email alerts with <code>sxolar</code>, including configuring queries, setting up Google Mail access, and scheduling with GitHub Actions.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -252,7 +262,7 @@ Jan 20, 2025
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="1" data-categories="UmVzZWFyY2glMkNMSUdPJTJDRGFyayUyME1hdHRlciUyQ1BhcGVy" data-listing-date-sort="1734307200000" data-listing-file-modified-sort="1770874895709" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="548">
+<div class="quarto-post image-right" data-index="1" data-categories="UmVzZWFyY2glMkNMSUdPJTJDRGFyayUyME1hdHRlciUyQ1BhcGVy" data-listing-date-sort="1734307200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="548">
 <div class="thumbnail"><a href="./posts/20241216-paper-ssmbank.html" class="no-external">
 
 <img loading="lazy" src="./img/ssm_bank.png" class="thumbnail-image">
@@ -274,7 +284,7 @@ Jan 20, 2025
 
 </div>
 <div class="delink listing-description"><a href="./posts/20241216-paper-ssmbank.html" class="no-external">
-<p>A new paper presenting a novel template bank for sub-solar mass black hole searches in LIGO’s O4 run.</p>
+<p>A new paper presenting a novel template bank for searching for sub-solar mass compact binary mergers in LIGO’s fourth observing run (O4). This bank is designed to detect potential primordial black holes, which could provide evidence for dark matter. The paper introduces a new neighborhood metric estimation technique to handle the extreme curvature of the signal manifold in this low-mass regime.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -285,7 +295,7 @@ Dec 16, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="2" data-categories="Q29kZSUyQ1BoeXNpY3MlMkNTaWduYWwlMjBQcm9jZXNzaW5nJTJDRWR1Y2F0aW9u" data-listing-date-sort="1730419200000" data-listing-file-modified-sort="1770874895709" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1065">
+<div class="quarto-post image-right" data-index="2" data-categories="Q29kZSUyQ1BoeXNpY3MlMkNTaWduYWwlMjBQcm9jZXNzaW5nJTJDRWR1Y2F0aW9u" data-listing-date-sort="1730419200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1065">
 <div class="thumbnail"><a href="./posts/20241101-app-dsp-filter.html" class="no-external">
 
 <img loading="lazy" src="./img/dsp_screenshot.png" class="thumbnail-image">
@@ -307,7 +317,7 @@ Dec 16, 2024
 
 </div>
 <div class="delink listing-description"><a href="./posts/20241101-app-dsp-filter.html" class="no-external">
-<p>An interactive web app to explore digital signal processing concepts through pole-zero manipulation.</p>
+<p>Introducing the DSP Filter Design Explorer, an interactive web application built with Python and Dash that allows users to explore the effects of pole and zero placement on filter stability, frequency response, and impulse response in both analog and digital domains. This tool provides a hands-on learning experience for students and engineers to develop intuition about signal processing concepts.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -318,7 +328,7 @@ Nov 1, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="3" data-categories="UGh5c2ljcw==" data-listing-date-sort="1715990400000" data-listing-file-modified-sort="1770874895709" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1267">
+<div class="quarto-post image-right" data-index="3" data-categories="UGh5c2ljcw==" data-listing-date-sort="1715990400000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="7" data-listing-word-count-sort="1267">
 <div class="thumbnail"><a href="./posts/20240518-classifying.html" class="no-external">
 
 <img loading="lazy" src="./img/types_of_physicists.png" class="thumbnail-image">
@@ -334,7 +344,7 @@ Nov 1, 2024
 
 </div>
 <div class="delink listing-description"><a href="./posts/20240518-classifying.html" class="no-external">
-Identity in physics can be challenging to find. We’re given a narrow set of labels to choose from, typically <em>theorist</em> or <em>experimentalist</em>, and these can often be…
+<p>Exploring the nuances of identity in physics, this post delves into the various categories of physicists based on their approach to physics, thought processes, and career development stages. It highlights the distinctions between experimentalists, phenomenologists, and theorists, as well as different types of theorists and stages of mathematical rigor in a physicist’s career.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -345,7 +355,7 @@ May 18, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="4" data-categories="Q29kZQ==" data-listing-date-sort="1709510400000" data-listing-file-modified-sort="1770874895709" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1128">
+<div class="quarto-post image-right" data-index="4" data-categories="Q29kZQ==" data-listing-date-sort="1709510400000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1128">
 <div class="thumbnail"><a href="./posts/20240304-ssh-namespacing.html" class="no-external">
 
 <img loading="lazy" src="./img/key-pile-small.png" class="thumbnail-image">
@@ -361,7 +371,7 @@ May 18, 2024
 
 </div>
 <div class="delink listing-description"><a href="./posts/20240304-ssh-namespacing.html" class="no-external">
-Why would you ever want to namespace your SSH credentials with Git? If you have multiple accounts on the same Git hosting service, you might want to use different SSH keys…
+<p>A guide to setting up SSH namespaces with Git, allowing you to use different SSH keys for different accounts on the same Git hosting service. This is particularly useful for developers who have both personal and work accounts on platforms like GitHub, GitLab, or Bitbucket.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -372,7 +382,7 @@ Mar 4, 2024
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="5" data-categories="UmVzZWFyY2glMkNDb2RlJTJDR2VvbWV0cnklMkNQYXBlcg==" data-listing-date-sort="1663804800000" data-listing-file-modified-sort="1770874895708" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="600">
+<div class="quarto-post image-right" data-index="5" data-categories="UmVzZWFyY2glMkNDb2RlJTJDR2VvbWV0cnklMkNQYXBlcg==" data-listing-date-sort="1663804800000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="600">
 <div class="thumbnail"><a href="./posts/20220922-paper-manifold.html" class="no-external">
 
 <img loading="lazy" src="./img/bank_coverage.png" class="thumbnail-image">
@@ -394,7 +404,7 @@ Mar 4, 2024
 
 </div>
 <div class="delink listing-description"><a href="./posts/20220922-paper-manifold.html" class="no-external">
-<p>A new paper presenting a novel algorithm for geometric template placement using binary trees.</p>
+<p>Introducing a new paper on geometric template placement for gravitational wave detection, utilizing a binary tree approach to efficiently cover the parameter space of compact binary mergers. This method offers significant computational advantages and improved structure over traditional stochastic placement techniques.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -405,7 +415,7 @@ Sep 22, 2022
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="6" data-categories="UGh5c2ljcyUyQ01hdGg=" data-listing-date-sort="1632009600000" data-listing-file-modified-sort="1770874895708" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1112">
+<div class="quarto-post image-right" data-index="6" data-categories="UGh5c2ljcyUyQ01hdGg=" data-listing-date-sort="1632009600000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1112">
 <div class="thumbnail"><a href="./posts/20210919-recent-finds.html" class="no-external">
 
 <img loading="lazy" src="./img/ParticleSwarmArrowsAnimation.gif" class="thumbnail-image">
@@ -423,7 +433,7 @@ Sep 22, 2022
 
 </div>
 <div class="delink listing-description"><a href="./posts/20210919-recent-finds.html" class="no-external">
-As this is the inaugural issue of the <em>recent finds</em> series, I’ll briefly note my motivation and inspiration. The title of this series is an overt nod to the famous series <em>This…</em>
+<p>In this inaugural issue of the ‘Recent Finds’ series, we explore the algebraic and geometric equivalence of tangent vectors as presented in Chris Isham’s ‘Modern Differential Geometry for Physicists’, and delve into the concept of Particle Swarm Optimization (PSO) and its applications in various scientific fields, including gravitational wave analysis.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -434,7 +444,7 @@ Sep 19, 2021
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="7" data-categories="TWF0aCUyQ0FsZ2VicmElMkNHcm91cCUyMFRoZW9yeQ==" data-listing-date-sort="1584230400000" data-listing-file-modified-sort="1770874895708" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="200">
+<div class="quarto-post image-right" data-index="7" data-categories="TWF0aCUyQ0FsZ2VicmElMkNHcm91cCUyMFRoZW9yeQ==" data-listing-date-sort="1584230400000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="200">
 <div class="thumbnail"><a href="./posts/20200315-algebra-ladder.html" class="no-external">
 
 <img loading="lazy" src="./img/algebra-ladder.png" class="thumbnail-image">
@@ -454,7 +464,7 @@ Sep 19, 2021
 
 </div>
 <div class="delink listing-description"><a href="./posts/20200315-algebra-ladder.html" class="no-external">
-I first encountered a diagram of algebraic structures at the end of Jeevanjee’s second chapter, “Vector Spaces”, which elegantly summarizes the high-level differences in…<span class="citation" data-cites="jeevanjeeIntroductionTensorsGroup2015d"></span>
+<p>A visual map of algebraic structures, showing the relationships between sets, magmas, groups, rings, fields, and more. This diagram helps clarify the hierarchy and connections between different algebraic objects commonly used in mathematical physics.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -465,7 +475,7 @@ Mar 15, 2020
 </a>
 </div>
 </div>
-<div class="quarto-post image-right" data-index="8" data-categories="Qm9va3MlMkNQaHlzaWNzJTJDTWF0aA==" data-listing-date-sort="1561680000000" data-listing-file-modified-sort="1770874895708" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="353">
+<div class="quarto-post image-right" data-index="8" data-categories="Qm9va3MlMkNQaHlzaWNzJTJDTWF0aA==" data-listing-date-sort="1561680000000" data-listing-file-modified-sort="1770931811056" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="2" data-listing-word-count-sort="353">
 <div class="thumbnail"><a href="./posts/20190628-book-review-jeevanjee.html" class="no-external">
 
 <img loading="lazy" src="./img/jeevanjee-book.png" class="thumbnail-image">
@@ -485,7 +495,7 @@ Mar 15, 2020
 
 </div>
 <div class="delink listing-description"><a href="./posts/20190628-book-review-jeevanjee.html" class="no-external">
-I picked up a copy of Nadir Jeevnajee’s <em>An Introduction to Tensors and Group Theory for Physicists</em> a few months ago with the intent of skimming through and spending most of…<span class="citation" data-cites="jeevanjeeIntroductionTensorsGroup2015d"></span>
+<p>A review of Nadir Jeevanjee’s ‘An Introduction to Tensors and Group Theory for Physicists’, highlighting its rigorous yet intuitive approach to tensors and group theory, making it a valuable resource for both physicists and computer scientists.</p>
 </a></div>
 </div>
 <div class="metadata">
@@ -572,7 +582,7 @@ Jun 28, 2019
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/locallytrivial\.com");
+        var filterRegex = new RegExp("https:\/\/jwkennington\.com");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
