--- a/research.html
+++ b/research.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
 
 <title>Research – Jim W. Kennington</title>
 <style>
@@ -60,7 +61,7 @@ div.csl-indent {
 <link href="site_libs/quarto-html/quarto-syntax-highlighting-ed96de9b727972fe78a7b5d16c58bf87.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap-355c415dd6b9922ddaf04a2341011fe1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap-30c9ffef5937f268bca92abf36cd19d1.min.css" rel="stylesheet" append-hash="true" id="quarto-bootstrap" data-mode="light">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -131,6 +132,18 @@ window.Quarto = {
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
+<meta property="og:title" content="Research – Jim W. Kennington">
+<meta property="og:description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
+<meta property="og:image" content="https://jwkennington.com/img/gtsp_manifold_3d_arrows.png">
+<meta property="og:site_name" content="Jim W. Kennington">
+<meta property="og:image:height" content="2970">
+<meta property="og:image:width" content="2970">
+<meta name="twitter:title" content="Research – Jim W. Kennington">
+<meta name="twitter:description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
+<meta name="twitter:image" content="https://jwkennington.com/img/gtsp_manifold_3d_arrows.png">
+<meta name="twitter:image-height" content="2970">
+<meta name="twitter:image-width" content="2970">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body class="nav-fixed quarto-light">
@@ -207,6 +220,11 @@ window.Quarto = {
 <h1 class="title">Research</h1>
 </div>
 
+<div>
+  <div class="description">
+    Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.
+  </div>
+</div>
 
 
 <div class="quarto-title-meta">
@@ -465,7 +483,7 @@ window.Quarto = {
     }
       var localhostRegex = new RegExp(/^(?:http|https):\/\/localhost\:?[0-9]*\//);
       var mailtoRegex = new RegExp(/^mailto:/);
-        var filterRegex = new RegExp("https:\/\/locallytrivial\.com");
+        var filterRegex = new RegExp("https:\/\/jwkennington\.com");
       var isInternal = (href) => {
           return filterRegex.test(href) || localhostRegex.test(href) || mailtoRegex.test(href);
       }
