deploy: b7a5305f5d61f3914de8002c2b374eac4f27f59b

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="description" content="Personal website of Jim W. Kennington, a theoretical physicist specializing in gravitational wave astronomy and geometric signal processing.">
 
 <title>Jim W. Kennington</title>
 <style>
@@ -145,13 +144,13 @@ window.Quarto = {
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="Jim W. Kennington">
-<meta property="og:description" content="Personal website of Jim W. Kennington, a theoretical physicist specializing in gravitational wave astronomy and geometric signal processing.">
+<meta property="og:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta property="og:image" content="https://jwkennington.com/img/profile.png">
 <meta property="og:site_name" content="Jim W. Kennington">
 <meta property="og:image:height" content="800">
 <meta property="og:image:width" content="800">
 <meta name="twitter:title" content="Jim W. Kennington">
-<meta name="twitter:description" content="Personal website of Jim W. Kennington, a theoretical physicist specializing in gravitational wave astronomy and geometric signal processing.">
+<meta name="twitter:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta name="twitter:image" content="https://jwkennington.com/img/profile.png">
 <meta name="twitter:image-height" content="800">
 <meta name="twitter:image-width" content="800">
@@ -215,11 +214,6 @@ window.Quarto = {
 <div class="quarto-title">
 <h1 class="title">Jim W. Kennington</h1>
 </div>
-<div>
-  <div class="description">
-    Personal website of Jim W. Kennington, a theoretical physicist specializing in gravitational wave astronomy and geometric signal processing.
-  </div>
-</div>
 <div class="quarto-title-meta">
   </div>
 </header><main class="content" id="quarto-document-content">
@@ -228,7 +222,7 @@ window.Quarto = {
 <h2 data-anchor-id="whats-new">What’s New</h2>
 <div id="listing-landing-posts" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-categories="UGh5c2ljcyUyQ0NvZGU=" data-listing-date-sort="1737331200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1786">
+<div class="g-col-1" data-index="0" data-categories="UGh5c2ljcyUyQ0NvZGU=" data-listing-date-sort="1737331200000" data-listing-file-modified-sort="1771124323209" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1786">
 <a href="./posts/20250120-sxolar.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -249,7 +243,7 @@ Jan 20, 2025
 </div>
 </div></a>
 </div>
-<div class="g-col-1" data-index="1" data-categories="UmVzZWFyY2glMkNMSUdPJTJDRGFyayUyME1hdHRlciUyQ1BhcGVy" data-listing-date-sort="1734307200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="548">
+<div class="g-col-1" data-index="1" data-categories="UmVzZWFyY2glMkNMSUdPJTJDRGFyayUyME1hdHRlciUyQ1BhcGVy" data-listing-date-sort="1734307200000" data-listing-file-modified-sort="1771124323209" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="3" data-listing-word-count-sort="548">
 <a href="./posts/20241216-paper-ssmbank.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
@@ -270,7 +264,7 @@ Dec 16, 2024
 </div>
 </div></a>
 </div>
-<div class="g-col-1" data-index="2" data-categories="Q29kZSUyQ1BoeXNpY3MlMkNTaWduYWwlMjBQcm9jZXNzaW5nJTJDRWR1Y2F0aW9u" data-listing-date-sort="1730419200000" data-listing-file-modified-sort="1770931811057" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1065">
+<div class="g-col-1" data-index="2" data-categories="Q29kZSUyQ1BoeXNpY3MlMkNTaWduYWwlMjBQcm9jZXNzaW5nJTJDRWR1Y2F0aW9u" data-listing-date-sort="1730419200000" data-listing-file-modified-sort="1771124323209" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="6" data-listing-word-count-sort="1065">
 <a href="./posts/20241101-app-dsp-filter.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top">
