--- a/tools.html
+++ b/tools.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="description" content="Open source software for rigorous signal processing and geometric analysis.">
 
 <title>Tools &amp; Software – Jim W. Kennington</title>
 <style>
@@ -84,10 +83,10 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="Tools &amp; Software – Jim W. Kennington">
-<meta property="og:description" content="Open source software for rigorous signal processing and geometric analysis.">
+<meta property="og:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta property="og:site_name" content="Jim W. Kennington">
 <meta name="twitter:title" content="Tools &amp; Software – Jim W. Kennington">
-<meta name="twitter:description" content="Open source software for rigorous signal processing and geometric analysis.">
+<meta name="twitter:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta name="twitter:card" content="summary">
 </head>
 
@@ -159,11 +158,6 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <h1 class="title">Tools &amp; Software</h1>
 </div>
 
-<div>
-  <div class="description">
-    Open source software for rigorous signal processing and geometric analysis.
-  </div>
-</div>
 
 
 <div class="quarto-title-meta">
