--- a/research.html
+++ b/research.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
 
 <title>Research – Jim W. Kennington</title>
 <style>
@@ -133,13 +132,13 @@ window.Quarto = {
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="Research – Jim W. Kennington">
-<meta property="og:description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
+<meta property="og:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta property="og:image" content="https://jwkennington.com/img/gtsp_manifold_3d_arrows.png">
 <meta property="og:site_name" content="Jim W. Kennington">
 <meta property="og:image:height" content="2970">
 <meta property="og:image:width" content="2970">
 <meta name="twitter:title" content="Research – Jim W. Kennington">
-<meta name="twitter:description" content="Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.">
+<meta name="twitter:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta name="twitter:image" content="https://jwkennington.com/img/gtsp_manifold_3d_arrows.png">
 <meta name="twitter:image-height" content="2970">
 <meta name="twitter:image-width" content="2970">
@@ -220,11 +219,6 @@ window.Quarto = {
 <h1 class="title">Research</h1>
 </div>
 
-<div>
-  <div class="description">
-    Explore the research of Jim W. Kennington, a theoretical physicist applying geometry to gravitational wave astronomy, including his work on compact binary coalescence detection pipelines and tests of general relativity. Research areas include geometric methods in gravitational wave analysis, multimessenger astronomy, exotic source searches, and testing GR.
-  </div>
-</div>
 
 
 <div class="quarto-title-meta">
