deploy: dff5640d4a208af960be9b0b692df13e9d72b8ff

--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
 
 <title>About – Jim W. Kennington</title>
 <style>
@@ -84,10 +83,10 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
 <link rel="stylesheet" href="styles.css">
 <meta property="og:title" content="About – Jim W. Kennington">
-<meta property="og:description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
+<meta property="og:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta property="og:site_name" content="Jim W. Kennington">
 <meta name="twitter:title" content="About – Jim W. Kennington">
-<meta name="twitter:description" content="Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.">
+<meta name="twitter:description" content="Mathematical Physics &amp; Geometric Signal Processing">
 <meta name="twitter:card" content="summary">
 </head>
 
@@ -158,11 +157,6 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <h1 class="title">About</h1>
 </div>
 
-<div>
-  <div class="description">
-    Learn about Jim W. Kennington, a theoretical physicist specializing in geometry and gravitational wave astronomy.
-  </div>
-</div>
 
 
 <div class="quarto-title-meta">
@@ -185,14 +179,14 @@ gtag('config', 'G-PBMXNQK5V1', { 'anonymize_ip': true});
 <section id="background" class="level2">
 <h2 class="anchored" data-anchor-id="background">Background</h2>
 <p>The through-line of my career has been a fascination with geometry, not just as a mathematical tool, but as the fundamental language of physical law.</p>
-<p>This interest began during my time at the <em>United States Naval Academy</em>. While the Academy instilled in me a respect for mission-driven engineering, I found myself drawn to the theoretical machinery underneath. Mentorship under Prof.&nbsp;Christopher Morgan, a submarine officer turned astrophysicist, introduced me to the study of Active Galactic Nuclei (AGN) and helped me realize that my contribution to the mission would come from the chalkboard rather than the conning tower.</p>
-<p>I transferred to <em>UT Austin</em> to pursue this depth, pivoting to pure physics and mathematics. There, I immersed myself in the study of dynamical systems and the geometry of phase space, furthering the understanding of dynamics <em>as</em> geometry.</p>
-<p>Prior to my doctoral studies, I spent several years as a quantitative developer at <em>HBK Capital Management</em>. This period was an apprenticeship in software architecture. Designing low-latency, distributed C++/Python systems taught me that elegant theory requires robust implementation. I learned to view code not as a mere script for calculation, but as an architecture that must manage complexity and scale.</p>
+<p>This interest began during my time at the <em>United States Naval Academy</em>. While the Academy instilled in me a respect for mission-driven engineering, I found myself drawn to the theoretical machinery underneath. Mentorship under Prof.&nbsp;Christopher Morgan introduced me to the study of Active Galactic Nuclei (AGN) and gravitational lensing; a remarkable geometric connection between gravitation and light.</p>
+<p>Realising that my contribution to the mission would come from a lab, I transferred to <em>UT Austin</em> to pursue physics in depth, pivoting to pure physics and mathematics. There, I immersed myself in the study of dynamical systems and the geometry of phase space, furthering the understanding of dynamics <em>as</em> geometry.</p>
+<p>Prior to my doctoral studies, I spent several years as a quantitative developer at <em>HBK Capital Management</em>. This period was essentially an apprenticeship in software architecture, where I designed low-latency, distributed C++/Python systems and learned that elegant theory requires robust implementation. I also found another powerful application of geometric methods to model interest rate curves and associated evolution of internal states, using techniques like Kalman filters.</p>
 </section>
 <section id="current-work" class="level2">
 <h2 class="anchored" data-anchor-id="current-work">Current Work</h2>
-<p>At Penn State, I have returned to theory to apply this industrial rigor to fundamental questions in gravity. My work seeks to bring the precision of differential geometry and the robustness of software engineering to the study of the universe.</p>
-<p>I often find myself venturing into pure mathematical subjects motivated by physical applications, including commutative algebras and information geometry. To foster this interdisciplinary dialogue, I co-founded the <em>Mathematical Aspects of Physics (MAP) seminar</em>, a series designed to connect the Math and Physics departments and explore the deep structures underlying our physical theories.</p>
+<p>At Penn State, I have returned to theory to apply this industrial rigor to fundamental questions in gravity. My work seeks to bring the precision of differential geometry and the robustness of software engineering to the study of the universe. I currently work on a variety of astrophysical searches using signal processing methods, and am continuing to find new applications of geometry to improve these techniques.</p>
+<p>Often, I find myself venturing into pure mathematical subjects motivated by physical applications, including commutative algebras and information geometry. To foster this interdisciplinary dialogue, I co-founded the <em>Mathematical Aspects of Physics (MAP) seminar</em> at Penn State, a series designed to connect the Math and Physics departments and explore the deep structures underlying our physical theories.</p>
 <p>For more details on my research, see the <a href="./research.html">Research</a> page.</p>
 
 
